# rust-nn

./: Cargo.toml  LICENSE  README.md
.cargo/: config
benches/: train.rs
examples/: comparison_optimizer.rs  flip_sign.rs  product.rs  xor.rs  xor_save_load.rs
src/: layer.rs  lib.rs  train.rs
src/predict/: layer.rs  mod.rs  model.rs  regression.rs
src/train/: layer.rs  mod.rs  model.rs  optimizer.rs  regression.rs
