[package]
name = "rust-nn"
version = "0.1.0"
authors = ["Daiju Nakayama <42.daiju@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = { version = "*", features = ["serde-1"] }
rand = "^0.8"
rand_distr = "*"
rand_pcg = "*"
serde = { version ="1.0", features = ["derive"] }
rmp-serde = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "train"
harness = false
